adjust font-family

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         />
         <title>HBD</title>
         <style>
+            * {
+                font-family: Verdana, Arial, sans-serif;
+            }
             body {
                 background-color: #f9f9f9; /* Light background */
                 color: #111; /* Dark text */
