adjust card spacing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 100vh;
+                padding: 60px 0;
             }
             .card {
                 width: 400px; /* Wider card width */
