add background image

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
                 font-family: Verdana, Arial, sans-serif;
             }
             body {
-                background-color: #f9f9f9; /* Light background */
                 color: #111; /* Dark text */
+                background: url('imgs/bg-basketball.webp') no-repeat fixed;
+                background-blend-mode: lighten;
+                background-color: #ffffffcc;
+                background-size: cover;
             }
             p {
                 margin: 0.2em;
