--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             }
             body {
                 color: #111; /* Dark text */
-                background: url('imgs/bg-basketball.webp') no-repeat fixed;
+                background-image: url('imgs/bg-basketball.webp');
                 background-blend-mode: lighten;
                 background-color: #ffffffcc;
-                background-size: cover;
+                background-size: 100%;
             }
             p {
                 margin: 0.2em;
