--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
             }
             body {
                 color: #111; /* Dark text */
-                background-image: url('imgs/bg-basketball.webp');
-                background-blend-mode: lighten;
-                background-color: #ffffffcc;
-                background-size: 100%;
+                background: url('imgs/bg-gradient.png') no-repeat fixed;
+                background-size: cover;
             }
             p {
                 margin: 0.2em;
