--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
                 border: 1px solid #ccc; /* Lighter border */
                 border-radius: 10px;
                 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Lighter shadow */
-                background-color: #fff; /* Light background */
+                background: linear-gradient(
+                    135deg,
+                    #ffffff88 0%,
+                    #ffffff1b 100%
+                ); /* Material gradient background */
+                /* backdrop-filter: blur(2.5px); /* Background blur */
                 padding: 40px; /* Increased padding */
                 display: flex; /* Added to vertically center the content */
                 flex-direction: column; /* Added to vertically center the content */
@@ -98,7 +103,7 @@
                 </div>
                 <div class="card-footer">艾霓愛你</div>
                 <img
-                    src="imgs/playball.jpg"
+                    src="imgs/playball.png"
                     alt="Play Ball"
                     class="playball-img"
                 />
@@ -117,7 +122,7 @@
                 </div>
                 <div class="card-footer">文棧</div>
                 <img
-                    src="imgs/playball.jpg"
+                    src="imgs/playball.png"
                     alt="Play Ball"
                     class="playball-img"
                 />
@@ -137,7 +142,7 @@
                 </div>
                 <div class="card-footer">明佑</div>
                 <img
-                    src="imgs/playball.jpg"
+                    src="imgs/playball.png"
                     alt="Play Ball"
                     class="playball-img"
                 />
@@ -155,7 +160,7 @@
                 </div>
                 <div class="card-footer">書羽</div>
                 <img
-                    src="imgs/playball.jpg"
+                    src="imgs/playball.png"
                     alt="Play Ball"
                     class="playball-img"
                 />
@@ -172,7 +177,7 @@
                 </div>
                 <div class="card-footer">丁丁</div>
                 <img
-                    src="imgs/playball.jpg"
+                    src="imgs/playball.png"
                     alt="Play Ball"
                     class="playball-img"
                 />
