--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Lighter shadow */
                 background: linear-gradient(
                     135deg,
-                    #ffffff88 0%,
+                    #ffffffa2 0%,
                     #ffffff1b 100%
                 ); /* Material gradient background */
-                /* backdrop-filter: blur(2.5px); /* Background blur */
+                backdrop-filter: blur(2.5px); /* Background blur */
                 padding: 40px; /* Increased padding */
                 display: flex; /* Added to vertically center the content */
                 flex-direction: column; /* Added to vertically center the content */
