--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             }
             body {
                 color: #111; /* Dark text */
-                background: url('imgs/bg-gradient.png') no-repeat fixed;
+                background: url('imgs/bg-gradient-2.png') no-repeat fixed;
                 background-size: cover;
             }
             p {
