--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
             }
             body {
                 color: #111; /* Dark text */
-                background: url('imgs/bg-gradient-2.png') no-repeat fixed;
-                background-size: cover;
+                background-image: url('imgs/bg-gradient-2.png');
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: 100%;
             }
             p {
                 margin: 0.2em;
