--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 background-image: url('imgs/bg-gradient-2.png');
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                background-size: 100%;
+                background-size: cover;
             }
             p {
                 margin: 0.2em;
