--- a/index.html
+++ b/index.html
@@ -184,5 +184,26 @@
                 />
             </div>
         </div>
+        <div class="card-wrapper">
+            <div class="card">
+                <img src="imgs/sun.png" alt="Sun" class="sun-img" />
+                <div class="card-title">Dear 慶哥學長</div>
+                <div class="card-content">
+                    <p>
+                        Happy Birthday! 🎉
+                        非常高興這學期能在同一家族中一起學習。你的努力與奉獻精神是我的榜樣，也激勵著我們每一個人，讓我們「義」同散發光芒！
+                    </p>
+                    <p>
+                        希望你在新的一歲裡，能夠實現更多的夢想，收穫無數的快樂與法喜。也祝你度過一個難忘的生日，享受這屬於你的特別時刻！
+                    </p>
+                </div>
+                <div class="card-footer">by 意芳</div>
+                <img
+                    src="imgs/playball.png"
+                    alt="Play Ball"
+                    class="playball-img"
+                />
+            </div>
+        </div>
     </body>
 </html>
